--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
   </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/Marchino5791" target="_blank">Marco Paolino</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
